# I2Console

./: .gitignore  CMakeLists.txt  Makefile  README.md  pico_sdk_import.cmake
.amazonq/cli-todo-lists/: 1761598913878.json
.github/: SETUP.md
.github/workflows/: ci.yml  release.yml
examples/esp-idf/: CMakeLists.txt  README.md
examples/esp-idf/components/i2console/: CMakeLists.txt  Kconfig  LICENSE  PUBLISHING.md  README.md  i2console.c  idf_component.yml
examples/esp-idf/components/i2console/include/: i2console.h
examples/esp-idf/main/: idf_component.yml  main.c
src/: button.c  button.h  circular_buffer.c  circular_buffer.h  flash_config.c  flash_config.h  i2c_slave.c  i2c_slave.h  lcd_driver.c  lcd_driver.h  lcd_ui.c  lcd_ui.h  log.c  log.h  main.c  tusb_config.h  usb_cdc.c  usb_cdc.h  usb_descriptors.c  version.h.in
